// Vitest Snapshot v1

exports[`Divider > Divider baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <p>
     这是第一种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。 
  </p>
  <t-divider />
  <p>
     这是第二种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。 
  </p>
  <t-divider
    dashed=""
  />
  <p>
     这是第三种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。 
  </p>
</t-space>
`;

exports[`Divider > Divider textVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <p>
     这是第一种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。 
  </p>
  <t-divider
    align="left"
  >
    TDesign
  </t-divider>
  <p>
     这是第二种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。 
  </p>
  <t-divider
    align="center"
    dashed=""
  >
    TDesign
  </t-divider>
  <p>
     这是第三种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。 
  </p>
  <t-divider
    align="right"
    dashed=""
  >
    TDesign
  </t-divider>
  <p>
     这是第四种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。 
  </p>
</t-space>
`;

exports[`Divider > Divider verticalVue demo works fine 1`] = `
<t-space
  break-line=""
>
  <span>
    正直
  </span>
  <t-divider
    layout="vertical"
  />
  <span>
    进取
  </span>
  <t-divider
    layout="vertical"
  />
  <span>
    协作
  </span>
  <t-divider
    dashed=""
    layout="vertical"
  />
  <span>
    创造
  </span>
</t-space>
`;
